--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "buildpro-backend",
   "version": "1.0.0",
   "description": "Backend API for BuildPro",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
-    "dev": "nodemon index.ts"
+    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node index.ts",
+    "dev": "nodemon --exec 'node --loader ts-node/esm --experimental-specifier-resolution=node index.ts'"
   },
   "dependencies": {
     "express": "^4.18.2",
