--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
     "sqlite": "^5.0.1",
     "uuid": "^9.0.0"
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
     "@types/node": "^20.5.1",
+    "@types/pg": "^8.10.2",
     "@types/uuid": "^9.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
