--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
+    "sqlite3": "^5.1.6",
+    "sqlite": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
