--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ dist-ssr
 .env.test
 .env.production
 
+# Server environment
+server/.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
