Add database schema for channels and team messages: Create tables for channels and team messages with necessary fields and relationships
Signed-off-by: GitHub <noreply@github.com>

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
     "sqlite": "^5.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
