--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node server/index.ts",
-    "init-db": "node --loader ts-node/esm --experimental-specifier-resolution=node server/init-db.ts",
+    "start": "TS_NODE_PROJECT=server/tsconfig.json node --loader ts-node/esm --experimental-specifier-resolution=node server/index.ts",
+    "init-db": "TS_NODE_PROJECT=server/tsconfig.json node --loader ts-node/esm --experimental-specifier-resolution=node server/init-db.ts",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
     "@types/pg": "^8.10.2",
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "ts-node": "^10.9.2"
   }
 }
