Refactor imports to use .js extensions and update tsconfig module resolution
Signed-off-by: GitHub <noreply@github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "node",
       "vite/client"
     ],
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "isolatedModules": true,
     "moduleDetection": "force",
     "allowJs": true,
@@ -24,7 +24,8 @@
         "./*"
       ]
     },
-    "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": ["./**/*.ts", "./**/*.tsx"],
+  "exclude": ["node_modules", "dist", "server"]
 }
