--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
       "node",
       "vite/client"
     ],
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
+    "baseUrl": ".",
+    "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "allowJs": true,
