--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "tsx server/index.ts"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "leaflet": "1.9.4",
     "lucide-react": "^0.554.0",
+    "onnxruntime-web": "^1.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "leaflet": "1.9.4",
-    "@supabase/supabase-js": "^2.39.0",
-    "onnxruntime-web": "^1.19.0"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
