--- a/server/package.json
+++ b/server/package.json
@@ -9,22 +9,22 @@
     "dev": "nodemon --exec 'node --loader ts-node/esm --experimental-specifier-resolution=node index.ts'"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "pg": "^8.11.3",
-    "sqlite3": "^5.1.6",
-    "sqlite": "^5.0.1",
-    "uuid": "^9.0.0"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/node": "^20.5.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/node": "^20.19.27",
     "@types/pg": "^8.10.2",
-    "@types/uuid": "^9.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "nodemon": "^3.0.1"
+    "@types/uuid": "^9.0.8",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
