--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,21 @@
   "main": "index.ts",
   "scripts": {
     "start": "node --loader ts-node/esm --experimental-specifier-resolution=node index.ts",
-    "dev": "nodemon --exec 'node --loader ts-node/esm --experimental-specifier-resolution=node index.ts'"
+    "dev": "nodemon --exec 'node --loader ts-node/esm --experimental-specifier-resolution=node index.ts'",
+    "migrate": "node scripts/migrate-to-pg.js"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "@types/ws": "^8.18.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "pg": "^8.11.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
