--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node --loader ts-node/esm --experimental-specifier-resolution=node index.ts",
     "dev": "nodemon --exec 'node --loader ts-node/esm --experimental-specifier-resolution=node index.ts'",
-    "migrate": "node scripts/migrate-to-pg.js"
+    "migrate": "npx tsx scripts/migrate-to-pg.ts"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
