--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
+    "winston": "^3.19.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
