--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,16 +22,38 @@
     "allowJs": true,
     "jsx": "react-jsx",
     "paths": {
-      "@/*": ["./*"],
-      "@/components/*": ["./components/*"],
-      "@/views/*": ["./views/*"],
-      "@/contexts/*": ["./contexts/*"],
-      "@/services/*": ["./services/*"],
-      "@/utils/*": ["./utils/*"],
-      "@/types": ["./types.ts"]
+      "@/*": [
+        "./*"
+      ],
+      "@/components/*": [
+        "./components/*"
+      ],
+      "@/views/*": [
+        "./views/*"
+      ],
+      "@/contexts/*": [
+        "./contexts/*"
+      ],
+      "@/services/*": [
+        "./services/*"
+      ],
+      "@/utils/*": [
+        "./utils/*"
+      ],
+      "@/types": [
+        "./types.ts"
+      ]
     },
     "noEmit": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "vite-env.d.ts", "types.ts"],
-  "exclude": ["node_modules", "dist", "server"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "vite-env.d.ts",
+    "types.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
