--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "leaflet": "1.9.4",
     "lucide-react": "^0.554.0",
+    "multer": "^2.0.2",
     "onnxruntime-web": "^1.19.0",
     "pg": "^8.16.3",
     "react": "^19.2.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
