--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.27",
     "@types/pg": "^8.10.2",
     "@types/uuid": "^9.0.8",
