--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sqlite3": "^5.1.7",
     "uuid": "^11.0.0",
     "winston": "^3.19.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.1",
@@ -40,7 +41,6 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "jsdom": "^27.3.0",
-    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^4.0.16"
