--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,9 @@
-node_modules
-.git
-.gitignore
-.dockerignore
-.env
-.env.*
+**/node_modules
+**/.git
+**/.gitignore
+**/.dockerignore
+**/.env
+**/.env.*
 dist
 build
 coverage
