--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "react-dom": "^19.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "tsx": "^4.21.0",
     "uuid": "^11.0.0",
     "winston": "^3.19.0",
-    "ws": "^8.18.3",
-    "tsx": "^4.21.0"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.1",
@@ -39,8 +39,17 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "husky": "^9.1.7",
     "jsdom": "^27.3.0",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^4.0.16"
