--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "tsx": "^4.21.0",
     "uuid": "^11.0.0",
     "winston": "^3.19.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.1",
