--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tsx": "^4.21.0",
