--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,10 +1,8 @@
-node_modules/
-.git/
-.github/
-dist/
-build/
-*.log
-.DS_Store
+.gcloudignore
+.git
+.gitignore
+node_modules
+dist
 .env
-.env.*
-!.env.production
+*.log
+google-cloud-sdk
