--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "start": "npx tsx server/index.ts",
+        "start": "NODE_ENV=development npx tsx server/index.ts",
         "migrate": "npx tsx server/scripts/migrate.ts",
         "migrate:status": "npx tsx server/scripts/migrate.ts status"
     },
