--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,36 +1,14 @@
 steps:
-  # Build the container image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build', 
-      '-t', 'gcr.io/$PROJECT_ID/buildpro-app', 
-      '--build-arg', 'VITE_SUPABASE_URL=$_VITE_SUPABASE_URL',
-      '--build-arg', 'VITE_SUPABASE_ANON_KEY=$_VITE_SUPABASE_ANON_KEY',
-      '--build-arg', 'GEMINI_API_KEY=$_GEMINI_API_KEY',
-      '.'
-    ]
-  
-  # Push the container image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/buildpro-app']
-  
-  # Deploy container image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-    - 'run'
-    - 'deploy'
-    - 'buildpro-app'
-    - '--image'
-    - 'gcr.io/$PROJECT_ID/buildpro-app'
-    - '--region'
-    - 'us-central1'
-    - '--platform'
-    - 'managed'
-    - '--allow-unauthenticated'
-    - '--memory'
-    - '2Gi'
-    - '--set-env-vars'
-    - 'VITE_SUPABASE_URL=$_VITE_SUPABASE_URL,VITE_SUPABASE_ANON_KEY=$_VITE_SUPABASE_ANON_KEY,GEMINI_API_KEY=$_GEMINI_API_KEY,NODE_ENV=production'
+- name: 'gcr.io/cloud-builders/docker'
+  args: [
+    'build',
+    '-t', 'gcr.io/$PROJECT_ID/buildpro-app',
+    '--build-arg', 'VITE_SUPABASE_URL=$_VITE_SUPABASE_URL',
+    '--build-arg', 'VITE_SUPABASE_ANON_KEY=$_VITE_SUPABASE_ANON_KEY',
+    '.'
+  ]
 images:
-  - 'gcr.io/$PROJECT_ID/buildpro-app'
+- 'gcr.io/$PROJECT_ID/buildpro-app'
+substitutions:
+  _VITE_SUPABASE_URL: ''
+  _VITE_SUPABASE_ANON_KEY: ''
