--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "start": "NODE_ENV=development npx tsx server/index.ts",
         "migrate": "npx tsx server/scripts/migrate.ts",
         "migrate:status": "npx tsx server/scripts/migrate.ts status",
-        "lint": "eslint \"**/*.{ts,tsx}\""
+        "lint": "eslint \"**/*.{ts,tsx}\"",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage"
     },
     "dependencies": {
         "@google/genai": "^1.30.0",
@@ -41,8 +44,11 @@
         "zod": "^4.2.1"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.1",
+        "@testing-library/user-event": "^14.6.1",
         "@types/express": "^5.0.6",
+        "@types/jest": "^30.0.0",
         "@types/multer": "^2.0.0",
         "@types/node": "^22.14.0",
         "@types/react": "^19.2.7",
@@ -51,11 +57,14 @@
         "@typescript-eslint/eslint-plugin": "^8.50.0",
         "@typescript-eslint/parser": "^8.50.0",
         "@vitejs/plugin-react": "^5.0.0",
+        "@vitest/ui": "^4.0.16",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
         "husky": "^9.1.7",
+        "jest": "^30.2.0",
+        "jest-environment-jsdom": "^30.2.0",
         "jsdom": "^27.3.0",
         "lint-staged": "^16.2.7",
         "prettier": "^3.7.4",
