--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "zod": "^4.2.1"
     },
     "devDependencies": {
+        "@apollo/client": "^4.0.11",
+        "@graphql-tools/schema": "^10.0.30",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.1",
         "@testing-library/user-event": "^14.6.1",
@@ -58,10 +60,12 @@
         "@typescript-eslint/parser": "^8.50.0",
         "@vitejs/plugin-react": "^5.0.0",
         "@vitest/ui": "^4.0.16",
+        "apollo-server-express": "^3.13.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
+        "graphql": "^16.12.0",
         "husky": "^9.1.7",
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
