--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,38 @@
-**/node_modules
-**/.git
-**/.gitignore
-**/.dockerignore
-**/.env
-**/.env.*
-dist
-build
-coverage
-*.md
-*.log
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+dist/
+build/
+
+# Development
+.env.local
+.env.development
+.env.test
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
-buildpro_db.sqlite
-buildproapp2
-test_image.png
-google-cloud-sdk
+Thumbs.db
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+data/
+
+# Logs
+logs/
+*.log
+
+# Temp
+tmp/
+temp/
