--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     },
     "dependencies": {
         "@google/genai": "^1.30.0",
+        "@google/generative-ai": "^0.24.1",
         "@supabase/supabase-js": "^2.39.0",
         "@tanstack/react-query": "^5.90.12",
         "@tanstack/react-query-devtools": "^5.91.1",
+        "apollo-server-express": "^3.13.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^4.18.2",
         "express-rate-limit": "^8.2.1",
+        "graphql": "^16.12.0",
         "helmet": "^8.1.0",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.4",
@@ -41,9 +44,7 @@
         "uuid": "^11.0.0",
         "winston": "^3.19.0",
         "ws": "^8.18.3",
-        "zod": "^4.2.1",
-        "graphql": "^16.12.0",
-        "apollo-server-express": "^3.13.0"
+        "zod": "^4.2.1"
     },
     "devDependencies": {
         "@apollo/client": "^4.0.11",
