--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "destination": "https://buildpro-432002951446.us-central1.run.app/api/$1"
     },
     {
       "source": "/(.*)",
