--- a/package.json
+++ b/package.json
@@ -64,13 +64,20 @@
         "@typescript-eslint/parser": "^8.50.0",
         "@vitejs/plugin-react": "^5.0.0",
         "@vitest/ui": "^4.0.16",
+        "autoprefixer": "^10.4.18",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-react-refresh": "^0.4.26",
         "husky": "^9.1.7",
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
         "jsdom": "^27.3.0",
         "lint-staged": "^16.2.7",
+        "postcss": "^8.4.35",
         "prettier": "^3.7.4",
         "supertest": "^7.1.4",
+        "tailwindcss": "^3.4.1",
         "typescript": "~5.8.2",
         "vite": "^6.2.0",
         "vite-plugin-pwa": "^1.2.0",
