--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "graphql": "^16.12.0",
         "helmet": "^8.1.0",
         "html2canvas": "^1.4.1",
+        "idb": "^8.0.3",
         "jspdf": "^3.0.4",
         "leaflet": "1.9.4",
         "lucide-react": "^0.554.0",
