--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "sqlite3": "^5.1.7",
         "tsx": "^4.21.0",
         "uuid": "^11.0.0",
+        "web-push": "^3.6.7",
         "winston": "^3.19.0",
         "ws": "^8.18.3",
         "zod": "^4.2.1"
@@ -82,6 +83,10 @@
         "typescript": "~5.8.2",
         "vite": "^6.2.0",
         "vite-plugin-pwa": "^1.2.0",
-        "vitest": "^4.0.16"
+        "vitest": "^4.0.16",
+        "workbox-core": "^7.4.0",
+        "workbox-precaching": "^7.4.0",
+        "workbox-routing": "^7.4.0",
+        "workbox-strategies": "^7.4.0"
     }
 }
