--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@google/genai": "^1.30.0",
         "@google/generative-ai": "^0.24.1",
+        "@sendgrid/mail": "^8.1.6",
         "@supabase/supabase-js": "^2.39.0",
         "@tanstack/react-query": "^5.90.12",
         "@tanstack/react-query-devtools": "^5.91.1",
@@ -40,8 +41,7 @@
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-router-dom": "^7.11.0",
-        "sqlite": "^5.1.1",
-        "sqlite3": "^5.1.7",
+        "react-router-dom": "^7.11.0",
         "tsx": "^4.21.0",
         "uuid": "^11.0.0",
         "web-push": "^3.6.7",
@@ -81,6 +81,9 @@
         "supertest": "^7.1.4",
         "tailwindcss": "^3.4.1",
         "typescript": "~5.8.2",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.7",
+        "vercel": "^50.1.3",
         "vite": "^6.2.0",
         "vite-plugin-pwa": "^1.2.0",
         "vitest": "^4.0.16",
