chore: cleanup deployment scripts and dependencies

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,13 @@
-# Vercel Ignore
+# Vercel Ignore List
+.vercel
 node_modules
+server/node_modules
 dist
+build
+coverage
 .git
 .DS_Store
 *.log
-coverage
-build
+*.sqlite
+.env
+.env.*
