--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 GEMINI_API_KEY=YOUR_API_KEY_HERE
 VITE_SUPABASE_URL=YOUR_SUPABASE_URL
 VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+VAPID_PUBLIC_KEY=YOUR_VAPID_PUBLIC_KEY
+VAPID_PRIVATE_KEY=YOUR_VAPID_PRIVATE_KEY
