--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,11 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'build',
-    '-t', 'gcr.io/$PROJECT_ID/buildpro:latest',
-    '--build-arg', 'VITE_SUPABASE_URL=$_VITE_SUPABASE_URL',
-    '--build-arg', 'VITE_SUPABASE_ANON_KEY=$_VITE_SUPABASE_ANON_KEY',
-    '.'
-  ]
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      - 'build'
+      - '--build-arg'
+      - 'VITE_GEMINI_API_KEY=AIzaSyB42_V54enOrtGM3mlyXuoESmb39VSoiI4'
+      - '-t'
+      - 'gcr.io/gen-lang-client-0994038290/buildpro:latest'
+      - '.'
 images:
-- 'gcr.io/$PROJECT_ID/buildpro:latest'
-substitutions:
-  _VITE_SUPABASE_URL: ''
-  _VITE_SUPABASE_ANON_KEY: ''
+  - 'gcr.io/gen-lang-client-0994038290/buildpro:latest'
